<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvName"
            android:transitionName="name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvCreatedAt"
            android:transitionName="created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"/>

        <View
            android:id="@+id/view"
            style="@style/Divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreatedAt"/>

        <ImageView
            android:id="@+id/storyImageView"
            android:transitionName="story"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey"
            android:contentDescription="@string/image_story"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,1.5:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="2dp"
            android:lineSpacingMultiplier="1.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyImageView"/>

        <TextView
            android:id="@+id/tvTitleDateCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_created"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"/>

        <TextView
            android:id="@+id/tvDateCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_created_wib"
            android:textSize="11sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleDateCreated"/>

        <TextView
            android:id="@+id/tvDateCreatedOnServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_created_server_time"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateCreated"/>

        <TextView
            android:id="@+id/tvCreatedFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created_from"
            android:textSize="11sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateCreatedOnServer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>